# driver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cmake/: Findpigpio.cmake
src/: CMakeLists.txt  common_headers.h  controller.cpp  controller.h  devices.cpp  devices.h  error_codes.cpp  error_codes.h  fundamental_types.h  gpio.cpp  gpio.h  gpio_error.cpp  gpio_error.h  io.cpp  io.h  io_driver.cpp  io_driver.h  log.cpp  log.h  log_setup.cpp  main.cpp  messages.h  net.cpp  net.h  network.cpp  network.h  peripheral_error.cpp  peripheral_error.h  peripherals.cpp  peripherals.h  peripherals_detail.cpp  peripherals_detail.h  peripherals_mock.cpp  status_loop.cpp  status_loop.h  timed_loop.h  transmitter.cpp  transmitter.h
src/core/: execution_context.cpp  execution_context.h  io_driver.cpp  io_driver.h
src/dev/: binary_pin.cpp  binary_pin.h  bme280.cpp  bme280.h  error_codes.cpp  error_codes.h  esc.cpp  esc.h  mcp3008.cpp  mcp3008.h
src/dev/detail/: error_codes.h  static_init.cpp
src/io/: devices.cpp  devices.h  error_codes.cpp  error_codes.h  io_driver.cpp  io_driver.h  static_init.cpp
src/mock/: io.cpp  io_base.h
src/msg/: async_read_message.h  async_write_message.h  error.cpp  error.h  message.h  message_buffer.h  read.h  write.h
src/net/: async_read_message.h  connection.h  connection_manager.h  error.cpp  error.h  message.h  message_buffer.cpp  message_buffer.h  messages.cpp  messages.h  signal_handler.cpp  signal_handler.h
src/normal/: io.cpp  io_base.h  peripherals.cpp  peripherals_detail.cpp
src/utl/: allocate_from_token.h  asio.h  fundamental_types.h
